--- a/app/src/main/res/drawable/bg_extra_sendbutton.xml
+++ b/app/src/main/res/drawable/bg_extra_sendbutton.xml
@@ -1,6 +1,7 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
-    <solid android:color="#2A2A2A" /> <!-- Dark pill color -->
+    <solid android:color="#FFFFFF" /> <!-- Dark pill color -->
     <corners android:radius="20dp" />
+    <padding android:left="4dp"/>
 
 </shape>
