--- a/app/src/main/res/layout/activity_chat.xml
+++ b/app/src/main/res/layout/activity_chat.xml
@@ -51,6 +51,13 @@
             app:tint="?attr/colorIcon" />
     </LinearLayout>
 
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/rv_conversations"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_above="@id/rl_inputBox"
+        android:layout_below="@id/ll_topBar"/>
+
     <!-- Center logo -->
     <TextView
         android:id="@+id/tvWelcomeTxt"
@@ -58,14 +65,79 @@
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
         android:background="@android:color/transparent"
+        android:fontFamily="@font/poppins_medium"
         android:text="Ask anything to Verix Chat"
         android:textColor="?attr/colorText"
         android:textSize="24sp" />
 
-    <!-- Bottom bar -->
+    <LinearLayout
+        android:id="@+id/ll_responseSelector"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_above="@id/rl_inputBox"
+        android:orientation="vertical"
+        android:background="@drawable/bg_response_selector"
+        android:layout_marginStart="8dp"
+        android:elevation="6dp"
+        android:paddingTop="12dp"
+        android:paddingBottom="10dp"
+        android:paddingStart="10dp"
+        android:paddingEnd="10dp"
+        android:visibility="gone"
+        android:clipToOutline="true">
+
+        <!-- Friendly Option -->
+        <TextView
+            android:id="@+id/tvFriendly"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:drawablePadding="8dp"
+            android:text="Friendly"
+            android:gravity="center_vertical"
+            android:textSize="14sp"
+            android:padding="10dp"
+            app:tint="?attr/colorIcon"
+            android:fontFamily="@font/poppins_medium"
+            android:textColor="?attr/colorText"
+            app:drawableStartCompat="@drawable/ic_response_type_friendly" />
+
+        <!-- Professional Option -->
+        <TextView
+            android:id="@+id/tvProfessional"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:drawablePadding="8dp"
+            android:text="Professional"
+            android:textSize="14sp"
+            android:padding="10dp"
+            android:fontFamily="@font/poppins_medium"
+            android:gravity="center_vertical"
+            android:background="?android:attr/selectableItemBackground"
+            android:textColor="?attr/colorText"
+            app:tint="?attr/colorIcon"
+            app:drawableStartCompat="@drawable/ic_response_type_professional" />
+
+        <!-- Default Option -->
+        <TextView
+            android:id="@+id/tvDefault"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="?android:attr/selectableItemBackground"
+            android:drawablePadding="8dp"
+            android:fontFamily="@font/poppins_medium"
+            android:padding="10dp"
+            android:text="Default"
+            android:textColor="?attr/colorText"
+            android:textSize="14sp"
+            android:gravity="center_vertical"
+            app:drawableStartCompat="@drawable/ic_response_type_default" />
+
+    </LinearLayout>
+
 
     <!-- Input area -->
     <RelativeLayout
+        android:id="@+id/rl_inputBox"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
@@ -77,22 +149,26 @@
         android:paddingBottom="8dp">
 
         <EditText
-            android:id="@+id/inputText"
+            android:id="@+id/et_inputText"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="@android:color/transparent"
             android:hint="Ask anything"
+            android:maxLines="5"
             android:textColor="?attr/colorText"
             android:textColorHint="?attr/colorTextHint"
+            android:fontFamily="@font/poppins_regular"
+            android:paddingLeft="4dp"
+            android:paddingTop="4dp"
             android:paddingBottom="8dp"
-            android:textSize="16sp" />
+            android:textSize="14sp" />
 
         <!-- Controls Row -->
         <RelativeLayout
             android:id="@+id/controlsRow"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_below="@id/inputText"
+            android:layout_below="@id/et_inputText"
             android:layout_marginTop="8dp">
 
             <!-- Response Type Button (Like attach icon) -->
@@ -104,7 +180,7 @@
                 android:layout_centerVertical="true"
                 android:background="@drawable/bg_extra_response_button"
                 android:contentDescription="Response Type"
-                android:src="@drawable/ic_response_type"
+                android:src="@drawable/ic_response_type_default"
                 app:tint="?attr/colorIcon" />
 
             <!-- Deep Search -->
@@ -114,29 +190,33 @@
                 android:layout_height="36dp"
                 android:layout_marginStart="8dp"
                 android:layout_toEndOf="@id/btnResponseType"
-                android:background="@drawable/bg_extra_button"
+                android:background="@drawable/bg_extra_quiz"
                 android:gravity="center_vertical"
                 android:orientation="horizontal"
                 >
 
                 <ImageView
+                    android:id="@+id/iv_quizMode"
                     android:layout_width="20dp"
                     android:layout_height="20dp"
                     android:src="@drawable/ic_quizmode"
-                    app:tint="?attr/colorIcon" />
+                    app:tint="?attr/colorQuizElementsInactive" />
 
                 <TextView
+                    android:id="@+id/tv_quizMode"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="4dp"
                     android:text="Quiz Mode"
-                    android:textColor="?attr/colorText"
+                    android:paddingTop="2dp"
+                    android:fontFamily="@font/poppins_regular"
+                    android:textColor="?attr/colorQuizElementsInactive"
                     android:textSize="14sp" />
             </LinearLayout>
 
-            <!-- Quiz Mode -->
+            <!-- Notify Mode -->
             <LinearLayout
-                android:id="@+id/btnNotify"
+                android:id="@+id/btnTone"
                 android:layout_width="wrap_content"
                 android:layout_height="36dp"
                 android:layout_marginStart="8dp"
@@ -149,25 +229,28 @@
                 <ImageView
                     android:layout_width="20dp"
                     android:layout_height="20dp"
-                    android:src="@drawable/ic_notify"
+                    android:src="@drawable/ic_tone"
                     app:tint="?attr/colorIcon" />
 
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="4dp"
-                    android:text="Notify"
+                    android:fontFamily="@font/poppins_regular"
+                    android:paddingTop="2dp"
+                    android:text="Tone(D)"
                     android:textColor="?attr/colorText"
                     android:textSize="14sp" />
             </LinearLayout>
 
             <!-- Mic Button -->
             <ImageButton
-                android:id="@+id/btnMic"
-                android:layout_width="36dp"
-                android:layout_height="36dp"
+                android:id="@+id/btn_btnMic"
+                android:layout_width="24dp"
+                android:layout_height="24dp"
                 android:layout_marginEnd="8dp"
-                android:layout_toLeftOf="@id/sendButton"
+                android:layout_centerVertical="true"
+                android:layout_toLeftOf="@id/btn_sendButton"
                 android:background="?android:selectableItemBackgroundBorderless"
                 android:contentDescription="Mic"
                 android:src="@drawable/ic_mic"
@@ -175,14 +258,14 @@
 
             <!-- Send Button -->
             <ImageButton
-                android:id="@+id/sendButton"
+                android:id="@+id/btn_sendButton"
                 android:layout_width="36dp"
                 android:layout_height="36dp"
                 android:layout_alignParentEnd="true"
                 android:background="@drawable/bg_extra_sendbutton"
                 android:contentDescription="Send"
-                android:src="@drawable/ic_mic"
-                app:tint="?attr/colorIcon" />
+                android:src="@drawable/ic_send_button"
+                app:tint="?attr/colorBG" />
         </RelativeLayout>
     </RelativeLayout>
 
