--- a/app/src/main/res/drawable/bg_extra_sendbutton.xml
+++ b/app/src/main/res/drawable/bg_extra_sendbutton.xml
@@ -1,6 +1,6 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
-    <solid android:color="#FFFFFF" /> <!-- Dark pill color -->
+    <solid android:color="?attr/colorIcon" /> <!-- Dark pill color -->
     <corners android:radius="20dp" />
     <padding android:left="4dp"/>
 
